# rust-axum-mongodb

./: Cargo.toml
src/: db.rs  handler.rs  main.rs  model.rs  response.rs  route.rs  schema.rs
